# smartmower

./: .gitignore  HARDWARE_SPECIFICATIONS.md  Makefile  README.md
.windsurf/rules/: code-guide.md
docs/: ARCHITECTURE.md  PROJECT_TODO.md  slam_ultrasonic_todo.md
docs/mqtt/: camera_mqtt.md  fusion_mqtt.md  gps_mqtt.md  pico_mqtt.md  safety_mqtt.md  state_machine_mqtt.md
docs/protocols/: pico_serial_protocol.md
firmware/: README.md  binary_protocol.py  config.py  main.py
hardware/: ProPrj_smartmower_2025-07-31_08-52-16_2025-10-12.epro  ProPrj_smartmower_2025-07-31_08-52-16_2025-10-22.epro
joystick/: start_teleop_joy.sh  teleop-joy@.service
mower/: README.md
mower/mower_ws/: README.md  ros2.repos
mower/mower_ws/src/battery_manager/: CMakeLists.txt  package.xml
mower/mower_ws/src/blade_manager/: package.xml
mower/mower_ws/src/blade_manager/config/: params.yaml
mower/mower_ws/src/blade_manager/src/: blade_manager_node.cpp
mower/mower_ws/src/mower_bringup/: CMakeLists.txt  package.xml
mower/mower_ws/src/mower_bringup/config/: blade_manager.yaml  camera_info.yaml  events_bridge.yaml  joint_state_publisher.yaml  relay_manager.yaml  ros2_controllers.yaml  state_machine.yaml  static_transform_publisher.yaml
mower/mower_ws/src/mower_description/: CMakeLists.txt
mower/mower_ws/src/pico_control_hardware/: CMakeLists.txt
mower/mower_ws/src/relay_manager/: CMakeLists.txt  README.md  package.xml
mower/mower_ws/src/rpi_gpio/: package.xml
mower/mower_ws/src/rpi_gpio/src/: rpi_gpio_node.cpp
mower/mower_ws/src/safety_supervisor/: package.xml
mower/mower_ws/src/safety_supervisor/src/: safety_supervisor.cpp
mower/mower_ws/src/state_machine/: package.xml
mower/mower_ws/src/state_machine/src/: state_machine_node.cpp
mower/pico_micropython_ws/firmware/: README.md  main.py.test
mower_ws/: TODO.md  serial_imu_sniffer.py
mower_ws/src/battery_manager/: README.md
mower_ws/src/blade_manager/: CMakeLists.txt  README.md
mower_ws/src/blade_manager/src/: blade_manager_node.cpp
mower_ws/src/events_bridge/: CMakeLists.txt  package.xml
mower_ws/src/events_bridge/src/: events_bridge_node.cpp
mower_ws/src/mower_bringup/: package.xml
mower_ws/src/mower_description/: package.xml
mower_ws/src/mower_description/urdf/: gz_control.xacro  mower.urdf.xacro  mower_gz.urdf.xacro
mower_ws/src/mower_joy_bridge/: CMakeLists.txt  package.xml
mower_ws/src/mower_joy_bridge/src/: joy_bridge_node.cpp
mower_ws/src/mower_sim/: package.xml  setup.cfg  setup.py
mower_ws/src/mower_sim/config/: gz_bridge.yaml
mower_ws/src/mower_sim/launch/: gz.launch.py  rsp.launch.py
mower_ws/src/mower_sim/resource/: mower_sim
mower_ws/src/mower_sim/worlds/: empty.world  obstacles.world
mower_ws/src/pico_control_hardware/: CMakeLists.txt  package.xml  pico_hardware_plugin.xml
mower_ws/src/pico_control_hardware/include/pico_control_hardware/: pico_system_hardware.hpp
mower_ws/src/pico_control_hardware/launch/: pico_control_hardware.launch.py
mower_ws/src/pico_control_hardware/src/: pico_system_hardware.cpp
mower_ws/src/rpi_gpio/: CMakeLists.txt  README.md
mower_ws/src/rpi_gpio/src/: rpi_gpio_node.cpp
mower_ws/src/safety_supervisor/: CMakeLists.txt  README.md
mower_ws/src/safety_supervisor/src/: safety_supervisor.cpp
mower_ws/src/state_machine/: CMakeLists.txt  README.md
mower_ws/src/state_machine/src/: state_machine_node.cpp
mqtt_definitions/: README.md  extract_from_headers.py  mqtt_definitions_from_headers.json
pico_cpp_ws/firmware/: CMakeLists.txt  README.md  pico_sdk_import.cmake
pico_cpp_ws/firmware/src/: bno055.cpp  bno055.hpp  encoder.cpp  encoder.hpp  ina226.cpp  ina226.hpp  main.cpp  pcf8574.cpp  pcf8574.hpp  pins_config.hpp  protocol.cpp  protocol.hpp  sonar3.cpp  sonar3.hpp
pico_micropython_ws/: TODO.md
pico_micropython_ws/firmware/: README.md  main.py
pico_micropython_ws/firmware/app/: adafruit_bno055.py  blades.py  bumper_sensors.py  safety.py  (+5 more)
sim_ws/src/lawn_mower_robot/: CMakeLists.txt  README.md  package.xml
sim_ws/src/lawn_mower_robot/config/: gz_bridge.yaml  teleop.yaml
sim_ws/src/lawn_mower_robot/launch/: gazebo.launch.py  keyboard_teleop.launch.py  rsp.launch.py  rviz.launch.py  teleop.launch.py
sim_ws/src/lawn_mower_robot/rviz/: lawn_mower.rviz
sim_ws/src/lawn_mower_robot/scripts/: laserscan_to_range.py  pose_to_navsat.py
sim_ws/src/lawn_mower_robot/urdf/: gazebo_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro  sensor_camera.xacro  sensor_gps.xacro  sensor_imu.xacro  sensor_sonar_center.xacro  sensor_sonar_left.xacro  sensor_sonar_right.xacro  sensors.xacro
sim_ws/src/lawn_mower_robot/worlds/: obstacle.sdf  obstacles.world
simulatore/: Makefile  pico_gps_simulator.c
src/: Makefile
src/_damigrare/: TODO.md  funzionamento  install_dependencies.sh  parameter_migration_summary.md
src/config/: add_comments.py  battery_profiles.json  config_analysis.json  parameter_manager.py  robot_config.json  robot_config.json.save  robot_config_backup.json  robot_config_refactored.json
src/fusion/: FUSION_DATA_EXPANSION.md  README.md
src/gps/: Makefile  README.md
src/lcd_interface/: README.md  gpio_buzzer.py  lcd_interface.py  requirements.txt
src/path_planning/: Makefile  config.json.backup  path_planning_mqtt.h
src/pico/: Makefile  README.md
src/safety/: Makefile  README.md  smartmower-safety.service
src/slam/: Makefile  README.md
src/state_machine/: Makefile  README.md  camera_simulator.py  config.json.backup  perimeter_monitor.py  test_mqtt_publication.py  test_mqtt_stress.py  test_vision_reception.py  vision_monitor.py
src/supervisor/: Makefile  README.md
src/vision/: UNIFIED_CONFIG_MIGRATION.md  config_utils.py  vision_mqtt.h
src/web/: app.py
tests/: Makefile  README.md
tests/data/: sample_gps.json
tests/mqtt/: cam_publisher.cpp  fsm_tester.cpp  gps_publisher.cpp  imu_publisher.cpp  pico_data_publisher.cpp  pico_status_publisher.cpp  vo_publisher.cpp  vobstacle_publisher.cpp
web/: Makefile  README.md
web/src/: web_admin.cpp
web/static/: app.js  index.html  style.css
(+367 files in other folders)
