<?xml version="1.0"?>
<package format="3">
  <name>mower_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro e launch per la simulazione con Gazebo (ros_gz) del robot tosaerba</description>
  <maintainer email="vito@example.com">Vito</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>tf2_ros</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
