<?xml version="1.0"?>
<package format="3">
  <name>mower_sim</name>
  <version>0.1.0</version>
  <description>Launch e configurazioni per simulazione gz del robot tosaerba</description>
  <maintainer email="vito@example.com">Vito</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <depend>mower_description</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
