<?xml version="1.0"?>
<package format="3">
  <name>pico_control_hardware</name>
  <version>0.1.0</version>
  <description>ROS2 Control hardware interface for Pico-based mower drivetrain</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>pal_statistics</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <hardware_interface plugin="pico_control_hardware/pico_hardware_plugin.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
