<?xml version="1.0"?>
<package format="3">
  <name>battery_manager</name>
  <version>0.1.0</version>
  <description>Battery manager node: monitors battery percentage and publishes LOW_BATTERY event or safety error.</description>

  <maintainer email="vito@example.com">Vito</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
