<?xml version="1.0"?>
<package format="3">
  <name>mower_bringup</name>
  <version>0.1.0</version>
  <description>Bringup for real mower with ros2_control</description>
  <maintainer email="vito@example.com">vito</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <exec_depend>state_machine</exec_depend>
  <exec_depend>events_bridge</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
