<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" version="3.0"?>
<package format="3">
  <name>relay_manager</name>
  <version>0.1.0</version>
  <description>ROS 2 node to manage relay states based on mower state machine</description>
  <maintainer email="vito@todo.todo">vito</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
