<?xml version="1.0"?>
<package format="3">
  <name>rpi_gpio</name>
  <version>0.1.0</version>
  <description>Raspberry Pi 5 GPIO reader for E-Stop and buttons</description>
  <maintainer email="mower@example.com">Mower</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- libgpiod is a system dependency -->
  <depend>libgpiod-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
